--- a/src/main/resources/dashloader/lang/en_us.json
+++ b/src/main/resources/dashloader/lang/en_us.json
@@ -1,4 +1,27 @@
 {
+  "config.CACHE_FONT": "Font Cache",
+  "config.CACHE_MODEL_LOADER": "Model Loader Cache",
+  "config.CACHE_MODEL_LOADER.tooltip": "Caches BakedModels allowing the game to load extremely fast",
+  "config.CACHE_SHADER": "Shader Cache",
+  "config.CACHE_SPLASH_TEXT": "Splash Text Cache",
+  "config.CACHE_SPRITE_CONTENT": "Sprite Cache",
+  "config.CACHE_SPRITE_STITCHING": "Sprite Stitching Cache",
+  "config.FAST_MODEL_IDENTIFIER_EQUALS": "Fast Equals Check",
+  "config.FAST_MODEL_IDENTIFIER_EQUALS.tooltip": "Use a much faster equals check for ModelIdentifiers",
+  "config.FAST_WALL_BLOCK": "Fast Wall Blockstates",
+  "config.FAST_WALL_BLOCK.tooltip": "Caches the 2 most common blockstates for wall blocks",
+  "config.caching_toast": "Show Caching Toast",
+  "config.category.behaviour": "Behavior",
+  "config.category.features": "Features",
+  "config.category.visuals": "Visuals",
+  "config.compression": "Compression Level",
+  "config.compression.tooltip": "The level of compression to use when saving the cache",
+  "config.custom_splashes": "Custom Splashes",
+  "config.custom_splashes.tooltip": "Use ; to separate lines and ;; for a semicolon",
+  "config.default_splashes": "Add Default Splashes",
+  "config.max_caches": "Max Caches",
+  "config.single_threaded_reading": "Single Threaded Reading",
+  "config.title": "Dashloader Config",
   "debug": "Debug Mode is active in config.",
   "save": "Initializing",
   "save.cache": "Caching",
